# Manifest

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
lib/: colors.sh  config.sh  default.conf  stow_logic.sh  ui_backends.sh
manifest/: default.conf  main.py
manifest/core/: config.py  git.py  stow.py  ui.py  utils.py
manifest/default_configs/: default.conf
manifest/default_configs/themes/: dracula.ini
manifest/lib/: config.py  stow.py  ui.py  utils.py
