[project]
name = "manifest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.3.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "codespell>=2.4.1",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
